Add server-side compaction support and docs
Introduce server-side compaction for Opus 4.6+ to avoid OAuth 200K context failures. Key changes:

- Inject Anthropic `compact_20260112` edits for Opus 4.6+ requests and append the compaction beta header when enabled.
- Add config flags: COMPACTION_ENABLED and COMPACTION_TRIGGER_TOKENS (with validation and defaults) and update .env.example.
- Update openai-adapter, routes (openai & anthropic) and streaming to handle compaction lifecycle and to avoid forwarding compaction summaries to clients.
- Merge and filter beta headers to prevent incompatible betas (e.g. context-1m) from causing 400s.
- Update token/ thinking handling for Opus 4.6 vs older models and ensure compaction edit ordering.
- Add docs: ARCHITECTURE.md, COMPACTION.md, CHANGELOG.md, CONFIGURATION.md, TESTING.md and update README to describe compaction behavior and new configuration.
- Remove outdated REFACTORING.md and add a test script (src/test-context-strategy.ts).
- Misc: README and index.ts banner updates, package.json/config tweaks, and types updates to support compaction config.

This change shifts context management to Anthropic's server-side compaction (with proxy injection) and documents the rationale, mechanics, and known limitations.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # Optional: Fallback API key when Claude Code limits are hit
-# Also required for context summarization (the "summarize" strategy calls Claude directly)
 # ANTHROPIC_API_KEY=sk-ant-xxx
 
 # Port to run the proxy on (default: 8082)
@@ -7,9 +6,6 @@
 
 # Set to false to use direct API instead of Claude Code first
 # CLAUDE_CODE_FIRST=true
-
-# Optional: Override the system prompt instruction appended after the required Claude Code prefix
-# CLAUDE_CODE_EXTRA_INSTRUCTION=You are running headless as a proxy - do not mention Claude Code in your responses.
 
 # OpenAI/OpenRouter passthrough (for non-Claude models)
 # OPENAI_API_KEY=sk-xxx
@@ -24,31 +20,26 @@
 # Only enforced when requests come through Cloudflare tunnel (have CF-* headers)
 # ALLOWED_IPS=52.44.113.131,184.73.225.134,3.209.66.12
 
-# --- Context Management ---
+# --- Compaction (Server-Side Context Management) ---
 
-# Strategy: "summarize" (default), "trim", or "none"
-# "summarize" uses Claude to summarize old messages when over token limit (requires ANTHROPIC_API_KEY)
-# "trim" drops old messages (no API call, fast but loses context)
-# "none" disables context management entirely (requests over 200K will fail)
-# CONTEXT_STRATEGY=summarize
+# Enable server-side compaction for Opus 4.6+ models (default: true)
+# When enabled, the proxy injects a compact_20260112 edit that triggers Anthropic's
+# server-side summarization when input tokens exceed the trigger threshold.
+# This prevents 400 errors when OAuth's 200K context limit is reached.
+# COMPACTION_ENABLED=true
 
-# Model used for summarization (default: claude-opus-4-5)
-# CONTEXT_SUMMARIZATION_MODEL=claude-opus-4-5
+# Token threshold to trigger compaction (default: 150000, minimum: 50000)
+# When input tokens exceed this value, the API generates a compaction summary.
+# Lower values = more frequent compaction, higher values = more context preserved.
+# COMPACTION_TRIGGER_TOKENS=150000
 
-# Token threshold to trigger context management (default: 200000)
-# CONTEXT_MAX_TOKENS=200000
+# --- Token Inflation ---
 
-# Target token count after summarization (default: 180000)
-# CONTEXT_TARGET_TOKENS=180000
-
-# --- Extended Thinking ---
-
-# Thinking budget for model names like "claude-4.5-opus-high-thinking"
-# "max" = max_tokens - 1 (maximum thinking capacity), or set a specific token count
-# All current 4.5 models have a 64K max output limit, so "max" = 63,999 tokens
-# THINKING_BUDGET_HIGH=max
-# THINKING_BUDGET_MEDIUM=20000
-# THINKING_BUDGET_LOW=5000
+# Enable token inflation for prompt_tokens reported to Cursor (default: false)
+# Only needed when using MAX Mode ON (872K context denominator in Cursor).
+# Inflates prompt_tokens by ~4.36x so Cursor's context bar fills proportionally to the real 200K limit.
+# With MAX Mode OFF (200K denominator), this is NOT needed — raw tokens are already truthful.
+# TOKEN_INFLATION=true
 
 # --- Logging ---
 
