--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ccproxy-v2",
+  "name": "ccproxy",
   "module": "index.ts",
   "type": "module",
   "private": true,
   "scripts": {
     "start": "bun run index.ts",
-    "dev": "bun --hot run index.ts",
+    "dev": "bun --watch run index.ts",
+    "serve": "bun run index.ts",
     "typecheck": "bunx tsc --noEmit"
   },
   "devDependencies": {
